# SqMod

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake.yml
cbp/: Common.cbp  Hash.cbp  LibIRC.cbp  LibTCC.cbp  ModINI.cbp  ModIRC.cbp  ModJSON.cbp  ModMMDB.cbp  ModMongoose.cbp  ModMySQL.cbp  ModSQLite.cbp  ModSample.cbp  ModTCC.cbp  ModXML.cbp  Module.cbp  SQLite.cbp  Sample.cbp  Sandbox.cbp  Squirrel.cbp  TCC.cbp  default.workspace
cmake/: FindFFmpeg.cmake  FindMySQL.cmake
config/common/: maxminddb_config.h  pugiconfig.hpp  sqconfig.h
config/gcc32/: maxminddb_config.h
config/gcc64/: maxminddb_config.h
config/mingw32/: maxminddb_config.h
config/mingw64/: ircconfig.h  jansson_config.h  maxminddb_config.h
hello/: CMakeLists.txt  Common.cpp  Common.hpp  Module.cpp
include/: SimpleIni.h  jansson.h  jansson_config.h  libirc_rfcnumeric.h  libircclient.h  mongoose.h  sqrat.h  squirrel.h  squirrelex.h  vcmp.h  vcmp.new.h
include/RandomLib/: Config.h  DiscreteNormalAlt.hpp  UniformInteger.hpp
include/sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratClassType.h  sqratClassType.h.save-failed  sqratConst.h  sqratFunction.h  sqratGlobalMethods.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h  sqratVM.h
module/: CMakeLists.txt  Core.cpp  Core.hpp  Exports.cpp  Logger.cpp  Logger.hpp  Main.cpp  Register.cpp  SqBase.hpp
module/Base/: AABB.cpp  AABB.hpp  Buffer.cpp  Buffer.hpp  Circle.cpp  Circle.hpp  Color3.cpp  Color3.hpp  Color4.cpp  Color4.hpp  DynArg.hpp  Quaternion.cpp  Quaternion.hpp  ScriptSrc.cpp  ScriptSrc.hpp  Shared.cpp  Shared.hpp  Sphere.cpp  Sphere.hpp  Utility.cpp  Utility.hpp  VecMap.hpp  Vector2.cpp  Vector2.hpp  Vector2i.cpp  Vector2i.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
module/Core/: Areas.cpp  Areas.hpp  Buffer.cpp  Buffer.hpp  Command.cpp  Command.hpp  Common.cpp  Common.hpp  Entity.cpp  Entity.hpp  Events.inc  Funcs.inc  Inst.inc  Inventory.cpp  Inventory.hpp  Loot.cpp  Loot.hpp  Privilege.cpp  Privilege.hpp  Routine.cpp  Routine.hpp  Script.cpp  Script.hpp  Signal.cpp  Signal.hpp  Tasks.cpp  Tasks.hpp  ThreadPool.cpp  ThreadPool.hpp  Utility.cpp  Utility.hpp  Utils.inc  VecMap.hpp
module/Core/Privilege/: Base.cpp  Base.hpp  Class.cpp  Class.hpp  Entry.cpp  Entry.hpp  Unit.cpp  Unit.hpp
module/Entity/: Blip.cpp  Blip.hpp  Checkpoint.cpp  Checkpoint.hpp  KeyBind.cpp  KeyBind.hpp  Keybind.cpp  Keybind.hpp  Object.cpp  Object.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  Vehicle.cpp  Vehicle.hpp
module/Misc/: Algo.cpp  Algo.hpp  Areas.cpp  Areas.hpp  Broadcast.cpp  Command.cpp  Command.hpp  Constants.cpp  Exports.cpp  Functions.cpp  Functions.hpp  Model.cpp  Model.hpp  Official.cpp  Official.hpp  Player.cpp  Player.hpp  Privilege.cpp  Privilege.hpp  Register.cpp  Routine.cpp  Routine.hpp  Signal.cpp  Signal.hpp  Tasks.cpp  Tasks.hpp  Vehicle.cpp  Vehicle.hpp  Weapon.cpp  Weapon.hpp
module/PocoLib/: Crypto.cpp  Crypto.hpp  Data.cpp  Data.hpp  Foundation.cpp  JSON.cpp  Net.cpp  Net.hpp  RegEx.cpp  RegEx.hpp  Register.cpp  Time.cpp  Time.hpp  Util.cpp  XML.cpp  XML.hpp
module/SDK/: sqmod.h
module/Sqrat/: sqratAllocator.h  sqratArray.h  sqratClass.h  sqratClassType.h  sqratConst.h  sqratFunction.h  sqratGlobalMethods.h  sqratLightObj.h  sqratMemberMethods.h  sqratObject.h  sqratOverloadMethods.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h
module/VCMP/: vcmp20.h
modules/ini/: Common.cpp  Common.hpp  Document.cpp  (+5 more)
sample/: Module.cpp  Module.hpp
sandbox/: main.cpp
sdk/: CMakeLists.txt
sdk/include/: SqConfSDK.h  SqMod.h
shared/: ModBase.hpp  SqAPI.h  SqMod.c  SqMod.h  SqMod.inl  sq_mod.cpp  sq_mod.h  sq_mod.inl
source/: Areas.cpp  Areas.hpp  CMakeLists.txt  Command.cpp  Command.hpp  Common.cpp  Common.hpp  Config.hpp  Constants.cpp  Core.cpp  Core.hpp  CoreEntity.cpp  CoreEvents.cpp  CoreFuncs.cpp  CoreInst.cpp  CoreUtils.cpp  Debug.cpp  Debug.hpp  Entity.cpp  Entity.hpp  Exports.cpp  Logger.cpp  Logger.hpp  Main.cpp  Makefile  Misc.cpp  Register.cpp  Register.hpp  Routine.cpp  Routine.hpp  Signal.cpp  Signal.hpp  SqBase.hpp  Tasks.cpp  Tasks.hpp
source/Base/: AABB.cpp  AABB.hpp  Algo.cpp  Algo.hpp  Buffer.cpp  Buffer.hpp  Circle.cpp  Circle.hpp  Color3.cpp  Color3.hpp  Color4.cpp  Color4.hpp  Quaternion.cpp  Quaternion.hpp  ScriptSrc.cpp  ScriptSrc.hpp  Shared.cpp  Shared.hpp  Sphere.cpp  Sphere.hpp  Stack.cpp  Stack.hpp  Utility.hpp  Vector2.cpp  Vector2.hpp  Vector2f.cpp  Vector2f.hpp  Vector2i.cpp  Vector2i.hpp  Vector2u.cpp  Vector2u.hpp  Vector3.cpp  Vector3.hpp  Vector4.cpp  Vector4.hpp
source/Core/: Entity.inc  Events.inc  Funcs.inc  Inst.inc  Utils.inc
source/Entity/: Blip.cpp  Blip.hpp  Checkpoint.cpp  Checkpoint.hpp  Forcefield.cpp  Forcefield.hpp  Keybind.cpp  Keybind.hpp  Object.cpp  Object.hpp  Pickup.cpp  Pickup.hpp  Player.cpp  Player.hpp  Sphere.cpp  Sphere.hpp  Sprite.cpp  Sprite.hpp  Textdraw.cpp  Textdraw.hpp  Vehicle.cpp  Vehicle.hpp
source/Event/: Basic.cpp  Basic.hpp  Global.cpp  Global.hpp  Local.cpp  Local.hpp  Shared.cpp  Shared.hpp
source/Misc/: Algo.hpp  Areas.cpp  Areas.hpp  Automobile.cpp  Automobile.hpp  Broadcast.cpp  Command.cpp  Command.hpp  Constants.cpp  Constants.hpp  Exports.cpp  Functions.cpp  Functions.hpp  Model.cpp  Model.hpp  Player.cpp  Player.hpp  PlayerImmunity.cpp  PlayerImmunity.hpp  Radio.cpp  Radio.hpp  Register.cpp  Routine.cpp  Routine.hpp  Shared.cpp  Shared.hpp  Signal.cpp  Signal.hpp  Skin.cpp  Skin.hpp  Sound.cpp  Sound.hpp  Tasks.cpp  Tasks.hpp  Vehicle.cpp  Vehicle.hpp  VehicleImmunity.cpp  VehicleImmunity.hpp  WastedSettings.cpp  WastedSettings.hpp  (+6 more)
sqrat/: CMakeLists.txt  sqrat.cpp
sqrat/sqrat/: sqratArray.h  sqratClass.h  sqratConst.h  sqratFunction.h  sqratGlobalMethods.h  sqratMemberMethods.h  sqratObject.h  sqratScript.h  sqratTable.h  sqratTypes.h  sqratUtil.h
squirrel/: CMakeLists.txt  sqapiex.cpp  sqbaselib.cpp
squirrel/include/: squirrel.h
vcmp/: CMakeLists.txt  vcmp.c  vcmp.h
(+153 files in other folders)
